Change the content box alignment issue again

--- a/src/app/components/tweet/tweet.component.scss
+++ b/src/app/components/tweet/tweet.component.scss
@@ -2,7 +2,7 @@
 {
 margin-top: 10px;
   height: 200px;
-  width: 1040px;
+  width: 100%;
   background-color: #FAFAFA;
   margin-left: 8%;
   box-shadow: 0 0 2px rgba(0, 0, 0, .3);
@@ -46,7 +46,7 @@ button[type="submit"]:hover
 
 .grey.lighten-5
 {
-  width: 1040px;
+  width: 100%;
 }
 
 * {
