--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -47,7 +47,7 @@ ul {
 #txtSearchNews
 {    
     float: right;
-    margin-right: 11%;
+    margin-right: 10%;
     border: none;
     background-color: #fafafa;
     // box-sizing: border-box;
